Fixed alignment of browser tree, added rules for hidden code blocks for debug support.

--- a/themes/pahma/style/delphi_style.css
+++ b/themes/pahma/style/delphi_style.css
@@ -269,7 +269,7 @@ body {
 	
 	background-color: #61572f;
 	color: #ffffff;
-	text-align: center;
+	text-align: left;
 }
 
 #browser_help {
@@ -378,6 +378,9 @@ div.open div.treeitem {
 	display: block; 
 }
 div.closed div.treeitem {
+	display: none; 
+}
+code.hidden {
 	display: none; 
 }
 
